@@ -3951,3 +3951,5 @@ Changelog for GXemul:
 		reads and writes to other devices (such as RAM).
 20080325	Making the counter in the ReferenceCountable class mutable,
 		because const objects also need to be reference countable.
+		Attempting to fix a bug related to the integer types passed
+		to UnitTest::Assert. (Problem noticed by Hollis Blanchard.)
